<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOscuro">

    <!-- Título de la pantalla de ayuda -->
    <Button
        android:id="@+id/tituloAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ayuda"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Pregunta frecuente 1 -->
    <TextView
        android:id="@+id/pregunta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ConfigAlerts"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tituloAyuda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/respuesta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Explicacion1"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/pregunta1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Pregunta frecuente 2 -->
    <TextView
        android:id="@+id/pregunta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CómoRevisoHistorialEventos"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/respuesta1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/respuesta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Explicación2"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/pregunta2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón de contacto -->
    <Button
        android:id="@+id/botonContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contacto"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
