<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">


    <Button
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SistemaSeguridad"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorClaro"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/EstadoVentana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EstadoVentanaCerrada"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/imagenVentana"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ventana"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EstadoVentana"/>


    <TextView
        android:id="@+id/EstadoPuerta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EstadoPuertaCerrada"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/imagenVentana"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/imagenPuerta"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/puerta"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EstadoPuerta"/>

    <Button
        android:id="@+id/botonActivar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActivarSistema"
        android:textSize="25sp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Configuración de Alertas"
        android:textSize="23sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/botonActivar"
        tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>