<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UseSwitchCompatOrMaterialXml"
    android:background="@color/colorOscuro">

    <Button
        android:id="@+id/Alertas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Alertas"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchnotificaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HabilitarNotificaciones"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/Alertas"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <!-- Switch para activar/desactivar alertas -->
    <Switch
        android:id="@+id/switchActivarAlertas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Activar Alertas"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/switchnotificaciones"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <!-- Selector de tipo de alerta (sonido o vibración) -->
    <RadioGroup
        android:id="@+id/radioGroupTipoAlerta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/switchActivarAlertas"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioSonido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sonido"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/radioVibracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vibración"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            tools:ignore="HardcodedText" />
    </RadioGroup>

    <!-- configuración duración de las alertas -->
    <TextView
        android:id="@+id/textoDuracionAlerta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DuraciónEnSegundos"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/radioGroupTipoAlerta"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputDuracionAlerta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/diez"
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:inputType="number"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/textoDuracionAlerta"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Botón guardar configuraciones -->
    <Button
        android:id="@+id/botonGuardarAlertas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GuardarConfiguracion"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>