<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="UseSwitchCompatOrMaterialXml"
    android:background="@color/colorOscuro">

    <Button
        android:id="@+id/Config"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/ConfiguraciónSistema"
        android:textSize="23sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- sensibilidad del sensor -->
    <TextView
        android:id="@+id/Sensibilidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SensibilidadSensor"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/Config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <SeekBar
        android:id="@+id/SensibilidadSensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:progressTint="#FF5722"
        android:thumbTint="#FF5722"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Sensibilidad" />

    <TextView
        android:id="@+id/tvConfiguracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Configuración TV"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/SensibilidadSensor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText" />

    <Switch
        android:id="@+id/switchModoSilencio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Modo Silencio"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvConfiguracion"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <Switch
        android:id="@+id/switchNotificaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Activar Notificaciones"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchModoSilencio"
        tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/botonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VolverInicio"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/switchNotificaciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonGuardarConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar Configuración"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/botonHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IrAHistorial"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/botonGuardarConfig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IrAAyuda"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/botonHistorial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>